appdeploy/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  labels:
    service: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      service: front-end
  template:
    metadata:
      labels:
        network/web: "true"
        service: front-end
    spec:
      containers:
        - name: frontend
          image: 943618641173.dkr.ecr.us-east-1.amazonaws.com/frontend:0.1 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
      restartPolicy: Always
