appdeploy/newsfeed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: newsfeed
  name: newsfeed
spec:
  replicas: 2
  selector:
    matchLabels:
      service: newsfeed
  template:
    metadata:
      labels:
        network/web: "true"
        service: newsfeed
    spec:
      containers:
        - name: newsfeed
          image: 943618641173.dkr.ecr.us-east-1.amazonaws.com/newsfeed:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
          livenessProbe:
            tcpSocket:
              port: 8001
      restartPolicy: Always
