appdeploy/quote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: quote
  name: quote
spec:
  replicas: 2
  selector:
    matchLabels:
      service: quote
  template:
    metadata:
      labels:
        network/web: "true"
        service: quote
    spec:
      containers:
        - name: quote
          image: 943618641173.dkr.ecr.us-east-1.amazonaws.com/quotes:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
          livenessProbe:
            tcpSocket:
              port: 8002
      restartPolicy: Always
