appdeploy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer 
  ports:
  - name: http
    port: 80
    targetPort: 8080 
  selector:
    name: frontend
