appdeploy/newsfeed-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: newsfeed
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  selector:
    name: newsfeed
