appdeploy/quote-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quote
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8082
    targetPort: 8082
  selector:
    name: quote
