appdeploy/web-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/web: "true"
  podSelector:
    matchLabels:
      network/web: "true"
